--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </div>
             
             <div class="col-b">
-                <img src="/assets/Person1.png" alt="Mulher sorrindo!" />
+                <img src="./assets/Person1.png" alt="Mulher sorrindo!" />
             </div>
 
             <div class="stats">
