feat(link): changing whatsapp link

--- a/index.html
+++ b/index.html
@@ -397,10 +397,10 @@
               />
             </svg>
 
-            <h3>Autoimune</h3>
+            <h3>Doenças Autoimunes</h3>
             <p>
-              Suporte especializado para aliviar o desconforto e promover o seu
-              bem-estar.
+              Suporte especializado para aliviar os sintomas e melhorar a
+              qualidade de vida, garantindo que você viva bem.
             </p>
           </div>
 
@@ -525,7 +525,11 @@
               </li>
             </ul>
 
-            <a class="service-btn" href="#" target="_blank">
+            <a
+              class="service-btn"
+              href="https://api.whatsapp.com/send?phone=55110000000"
+              target="_blank"
+            >
               <svg
                 width="20"
                 height="21"
